src/test/ui/alloc-error/alloc-error-handler-bad-signature-3.stderr
error: function should have one argument
  --> $DIR/alloc-error-handler-bad-signature-3.rs:20:1
   |
LL | / fn oom() -> ! { //~ ERROR function should have one argument
LL | |     loop {}
LL | | }
   | |_^

error: aborting due to previous error

